# terminal

./: package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
components/: age-gate-modal.tsx  betting-panel.tsx  compliance-modals.tsx  fairness-modal.tsx  price-chart.tsx  public-bets-table.tsx  round-history.tsx  status-bar.tsx  terminal-frame.tsx  terminal-frame.tsx.backup  ticker.tsx  wallet-button.tsx  wallet-provider.tsx
contracts/: Anchor.toml  Cargo.toml  idl.json  prediction_betting.rs
contracts/solana-betting/: Anchor.toml  Cargo.toml
contracts/solana-betting/src/: lib.rs
hooks/: use-memecoin-betting.ts
lib/: market-simulation.ts  round-manager.ts  solana-api.ts
scripts/: deploy-contract.js
