[package]
name = "prediction_betting"
version = "0.1.0"
description = "Solana prediction betting program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "prediction_betting"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
